update document date, revise grammar

--- a/manuscripts/child-documents/discussion.Rmd
+++ b/manuscripts/child-documents/discussion.Rmd
@@ -4,9 +4,9 @@ In this study, we explored the feasibility of using EEG to study network variant
 
 Overall, our results were inconclusive. In support of our primary scientific hypothesis, the group-level effect sizes most compatible with our data, given the background model, showed that, on average, both phase coupling and amplitude coupling functional connectomes were more similar within than between individuals across contexts and frequency bands (Figures \@ref(fig:phase-similarity-plots-delta)-\@ref(fig:amplitude-similarity-plots-alpha)); that our data was incompatible with a model that assumed zero difference in functional connectome similarity within and between individuals across contexts (Tables \@ref(tab:phase-similarity-table-delta)-\@ref(tab:amplitude-similarity-table-alpha)); and that these differences were attributable to individual-dependent factors with small modulations by session and state (Tables \@ref(tab:phase-similarity-table-delta)-\@ref(tab:amplitude-similarity-table-alpha)). Moreover, the magnitude of these differences varied across contexts in an expected way, with the largest differences in similarity within and between individuals occurring for functional connectomes from the same sessions and states, the smallest differences occurring for functional connectomes from the different sessions and states, and relatively smaller increases and decreases in similarity across other contexts. At this level of description, our results were broadly consistent with the findings of methodologically similar fMRI studies [e.g., @grattonetal_FunctionalBrainNetworks_2018]. These results remained largely consistent for phase coupling functional connectomes when the phase lag index was estimated using the Hilbert transform method instead of the the multitaper method (Figures A\@ref(fig:phase-similarity-plots-hilbert-delta)-A\@ref(fig:phase-similarity-plots-hilbert-gamma)); and with few exceptions, these results were consistent between the reduced and maximal models of functional connectome similarity for both both phase coupling and amplitude coupling functional connectomes (Figures A\@ref(fig:phase-similarity-plots-maximal-theta)-A\@ref(fig:amplitude-similarity-plots-maximal-alpha)).
 
-However, in general, the group-level effect sizes most compatible with our data, given the background model, ranged from practically nil to at most small, depending on the contrast, coupling mode, and frequency band in question (Figures \@ref(fig:phase-similarity-plots-delta)-\@ref(fig:amplitude-similarity-plots-alpha)). Thus, although our results suggested that, on average, the phase coupling and amplitude coupling dynamics of underlying global network activity in each frequency band was differentiated between individuals across contexts *in our sample*, the influence of individual-dependent factors over and above the influence of stable group-dependent factors was either negligible or at best small. This is a clear departure from what has been described in the fMRI literature, where differences in functional connectome similarity within and between individuals have been reported to be stable, relatively large, and visually obvious, indicative of "a clear influence of individual features over and above common organizational principles at the network level," [@mareketal_SpatialTemporalOrganization_2018] such that fMRI functional connectomes may be well-suited for measuring and identifying the neural causes of variation in human behaviour, cognition, and their dysfunction [@grattonetal_FunctionalBrainNetworks_2018]. Our results do not inspire such confidence, and given the inherent limitations of EEG functional connectivity analysis, it is unclear to what extent they reflect genuinely small interindividual differences in electrophysiological connectivity across contexts, versus methodological limitations, selection bias, or random variation in our sample that may have caused us to underestimate or overestimate the magnitude of interindividual differences relative to the (unknown) true effect(s).
+However, in general, the group-level effect sizes most compatible with our data, given the background model, ranged from practically nil to at most small, depending on the contrast, coupling mode, and frequency band in question (Figures \@ref(fig:phase-similarity-plots-delta)-\@ref(fig:amplitude-similarity-plots-alpha)). Thus, although our results suggested that, on average, the phase coupling and amplitude coupling dynamics of underlying global network activity in each frequency band was differentiated between individuals across contexts *in our sample*, the influence of individual-dependent factors over and above the influence of stable group-dependent factors was either negligible or at best small. This is a clear departure from what has been described in the fMRI literature, where differences in functional connectome similarity within and between individuals have been reported to be stable, relatively large, and visually obvious, indicative of "a clear influence of individual features over and above common organizational principles at the network level," [@mareketal_SpatialTemporalOrganization_2018] such that fMRI functional connectomes may be well-suited for measuring and identifying the neural causes of variation in human behaviour, cognition, and their dysfunction [@grattonetal_FunctionalBrainNetworks_2018]. Our results do not inspire such confidence---and given the inherent limitations of EEG functional connectivity analysis, it is unclear to what extent they reflect genuinely small interindividual differences in electrophysiological connectivity across contexts, versus methodological limitations, selection bias, or random variation in our sample that may have caused us to underestimate or overestimate the magnitude of interindividual differences relative to the (unknown) true effect(s).
 
-Finally, we note that although the the group-level effect sizes most compatible with our data, given the background model, more similar within than between individuals, on average, this relationship was not necessarily true for all participants. Indeed, there was a notable degree of outcome variability in the direction (Figure \@ref(fig:subset-similarity-contrast-barplot)) and magnitude (for reduced models, see Figures A\@ref(fig:phase-similarity-subset-plots-delta)-A\@ref(fig:amplitude-similarity-subset-plots-alpha); for maximal models, see Figures A\@ref(fig:phase-similarity-plots-maximal-theta)-A\@ref(fig:amplitude-similarity-plots-maximal-alpha)) of these effects when differences in functional connectome similarity were analyzed at an individual-level. These results were also a clear departure from what has been described in the fMRI literature, where differences in functional connectome similarity within and between individuals have been found to be consistently positive at an individual-level, with relatively little outcome variability in the magnitude of these differences [@grattonetal_FunctionalBrainNetworks_2018]. Moreover, because of the outcome variability in our sample, we caution against confusing the positive and precise estimates of average effects for the group-level contrasts with the predictability of individual outcomes, which were more variable in both their direction and magnitude. However, equally, we also caution against confusing the individual-level contrasts whose direction was unresolved with precise zero effects or evidence of no positive difference in functional connectome similarity. For many of these contrasts, the effect sizes most compatible with our data, given the background model, included a range of effects that---although generally still at most small---were not negligible; thus, even though they leave open the possibility of negative, zero, or positive but negligible effects, they also leave open the possibility of small effects that may be worth investigating further.
+Finally, we note that although the the group-level effect sizes most compatible with our data, given the background model, more similar within than between individuals, on average, this relationship was not necessarily true for all participants. Indeed, there was a notable degree of outcome variability in the direction (Figure \@ref(fig:subset-similarity-contrast-barplot)) and magnitude (for reduced models, see Figures A\@ref(fig:phase-similarity-subset-plots-delta)-A\@ref(fig:amplitude-similarity-subset-plots-alpha); for maximal models, see Figures A\@ref(fig:phase-similarity-plots-maximal-theta)-A\@ref(fig:amplitude-similarity-plots-maximal-alpha)) of these effects when differences in functional connectome similarity were analyzed at an individual level. These results were also a clear departure from what has been described in the fMRI literature, where differences in functional connectome similarity within and between individuals have been found to be consistently positive at an individual-level, with relatively little outcome variability in the magnitude of these differences [@grattonetal_FunctionalBrainNetworks_2018]. Moreover, because of the outcome variability in our sample, we caution against confusing the positive and precise estimates of average effects for the group-level contrasts with the predictability of individual outcomes, which were more variable in both their direction and magnitude. However, equally, we also caution against confusing the individual-level contrasts whose direction was unresolved with precise zero effects or evidence of no positive difference in functional connectome similarity. For many of these contrasts, the effect sizes most compatible with our data, given the background model, included a range of effects that---although generally still at most small---were not negligible; thus, even though they leave open the possibility of negative, zero, or positive but negligible effects, they also leave open the possibility of small effects that may be worth investigating further.
 
 Considered together, given the background model used to investigate our research question, our results did not generally demonstrate the feasibility of using EEG to study network variants due to the inconsistencies observed across participants in our sample. At best our findings leave open the possibility that EEG functional connectomes may be suitable measures of stable individual differences in whole brain functional network organization, given that both the group-level results and a subset of individual-level results showed consistently positive differences in functional connectome similarity within versus between individuals across contexts and frequency bands; however, equally, it is apparent that if the phase coupling and/or amplitude coupling dynamics of underlying global network activity across frequency bands are indeed influenced by stable individual-dependent factors, further work identifying and developing methods to reliably measure and quantify these stable individual differences is necessary.
 
@@ -18,13 +18,13 @@ Notably, the prominence of alpha band functional connectivity coincided with the
 
 Furthermore, the pattern of group-level contrast results for phase coupling functional connectome similarities in the alpha band (Figure \@ref(fig:phase-similarity-plots-alpha)C) appeared to be influenced more by an individual-state effect than an individual-session effect (Figure \@ref(fig:outcome-plot), fourth plot); whereas (although subtle) the delta, theta, beta, and gamma bands (Figures \@ref(fig:phase-similarity-plots-delta)C, \@ref(fig:phase-similarity-plots-theta)C, \@ref(fig:phase-similarity-plots-beta)C, \@ref(fig:phase-similarity-plots-gamma)C) appeared to be influenced more by an individual-session effect than an individual-state effect (Figure \@ref(fig:outcome-plot), third plot). Although we did not predict this outcome, it may also be unsurprising, given that the typical widespread reduction in alpha band oscillations between eyes-closed and eyes-open resting state and associated changes in functional connectivity would be expected to produce such a pattern of results given that, within individuals, functional connectomes would be noticeably dissimilar between these states, on average, but similar within them; whereas the more subtle differences between eyes-closed and eyes-open resting state for other frequency bands would be less likely to produce such noticeable changes. 
 
-Our results are also conceptually consistent with a recent study by @nentwichetal_FunctionalConnectivityEEG_2020, who investigated the relationship between twelve phenotypic variables (age, sex, socioeconomic status, intelligence, and diagnostic assessments for sleep disturbance, behavioural and emotional problems, attention-deficit/hyperactivity disorder, anxiety, inattention, mood, internet addiction, distress tolerance) and phase coupling functional connectome similarities in a large sample of typically and atypically developing children and adolescents during resting in the delta, theta, alpha, and beta bands. They found that all twelve variables were unable to explain variation in functional connectome similarities between and among individuals in the delta, theta, alpha, and beta bands; with the exception of sex and age in the beta band. Although our study did not examine the relationship between any variables of interest and functional connectome similarity, the findings of @nentwichetal_FunctionalConnectivityEEG_2020 indicate---similar to our findings---that (1) functional connectomes may become more differentiated between individuals as a function of frequency band, given they only found phenotype-connectome relationships in the beta band; and (2) network variants may be harder to detect with EEG. Regarding the latter point, @nentwichetal_FunctionalConnectivityEEG_2020 also investigated the relationship between the aforementioned twelve variables and fMRI functional connectome similarities in the same sample. Here they found that four variables (age, sex, intelligence, and the assessment for behavioural and emotional problems) were able to explain variation in functional connectome similarities between and among individuals, suggesting that fMRI functional connectomes may better capture practically relevant information compared to EEG.
+Our results are also conceptually consistent with a recent study by @nentwichetal_FunctionalConnectivityEEG_2020, who investigated the relationship between twelve phenotypic variables (age, sex, socioeconomic status, intelligence, and diagnostic assessments for sleep disturbance, behavioural and emotional problems, attention-deficit/hyperactivity disorder, anxiety, inattention, mood, internet addiction, distress tolerance) and phase coupling functional connectome similarities in a large sample of typically and atypically developing children and adolescents during resting in the delta, theta, alpha, and beta bands. They found that all twelve variables were unable to explain variation in functional connectome similarities between and among individuals in the delta, theta, alpha, and beta bands: with the exception of sex and age in the beta band. Although our study did not examine the relationship between any variables of interest and functional connectome similarity, the findings of @nentwichetal_FunctionalConnectivityEEG_2020 indicate---similar to our findings---that (1) functional connectomes may become more differentiated between individuals as a function of frequency band, given they only found phenotype-connectome relationships in the beta band; and (2) network variants may be harder to detect with EEG. Regarding the latter point, @nentwichetal_FunctionalConnectivityEEG_2020 also investigated the relationship between the aforementioned twelve variables and fMRI functional connectome similarities in the same sample. Here they found that four variables (age, sex, intelligence, and the assessment for behavioural and emotional problems) were able to explain variation in functional connectome similarities between and among individuals, suggesting that fMRI functional connectomes may better capture practically relevant information compared to EEG.
 
 Finally, the smaller variations in within-individual functional connectome similarity across sessions and states observed in our sample were also consistent with previous EEG [@nentwichetal_FunctionalConnectivityEEG_2020], electrocorticography [ECoG\; @mostamesadaghiani_OscillationBasedConnectivityArchitecture_2021], and magnetoencephalography [MEG\; @colcloughetal_HowReliableAre_2016] research, which found that phase coupling and amplitude coupling functional connectomes were generally stable within individuals, showing moderate to high similarity within and between sessions and states across frequency bands. Additionally, in agreement with @colcloughetal_HowReliableAre_2016, we found that within-individual functional connectome similarity was generally higher when functional connectivity was estimated with the orthogonalized amplitude envelope correlation than with the phase lag index.
 
 ## Differences between phase and amplitude coupling
 
-Across all frequency bands, we found that functional connectivity estimated with the orthogonalized amplitude envelope correlation was generally smaller than with the phase lag index (Figure \@ref(fig:connectivity-histograms-figure)). As we discussed in the results section, we expected the estimates from these metrics to differ, given that the phase lag index and orthogonalized amplitude envelope correlation measure different aspects of functional connectivity in mathematically distinct ways. However, we also note that this difference is likely partially due to differences in the frequency specificity of the two methods, with the phase lag index having greater specificity than the orthogonalized amplitude envelope correlation. This difference in frequency specificity is attributable to the phase lag index being estimated and averaged over multiple frequency bins in each frequency band when using the multitaper method, versus the orthogonalized amplitude envelope correlation being estimated with a single analytic signal in each frequency band when using the Hilbert transform method. In Figures A\@ref(fig:phase-similarity-plots-hilbert-delta)-A\@ref(fig:phase-similarity-plots-hilbert-gamma) in Appendix A we show how the results change when the phase lag index is estimated using the Hilbert transform method. Across all five frequency bands we found that (1) functional connectivity was generally lower than we found with the multitaper method, but individual patterns of connectivity were similar or the same; and (2) functional connectome similarity was generally higher than we found with the multitaper method, but patterns of similarity and contrast effect sizes were similar or the same. Thus, although these changes were not great enough to change our conclusions, they did make the differences observed between the phase lag index and orthogonalized amplitude envelope correlation results less stark, and highlight how different spectral analysis methods can influence functional connectivity estimates if analysis parameters cannot be matched [cf. @bruns_FourierHilbertWaveletbased_2004].
+Across all frequency bands, we found that functional connectivity estimated with the orthogonalized amplitude envelope correlation was generally smaller than with the phase lag index (Figure \@ref(fig:connectivity-histograms-figure)). As we discussed in the results section, we expected the estimates from these metrics to differ, given that the phase lag index and orthogonalized amplitude envelope correlation measure different aspects of functional connectivity in mathematically distinct ways. However, we also note that this difference is likely partially due to differences in the frequency specificity of the two methods, with the phase lag index having greater specificity than the orthogonalized amplitude envelope correlation. This difference in frequency specificity is attributable to the phase lag index being estimated and averaged over multiple frequency bins in each frequency band when using the multitaper method, versus the orthogonalized amplitude envelope correlation being estimated with a single analytic signal in each frequency band when using the Hilbert transform method. In Figures A\@ref(fig:phase-similarity-plots-hilbert-delta)-A\@ref(fig:phase-similarity-plots-hilbert-gamma) in Appendix A we show how the results change when the phase lag index is estimated using the Hilbert transform method. Across all five frequency bands we found that (1) functional connectivity was generally lower than we found with the multitaper method, but individual patterns of connectivity were similar or the same; and (2) functional connectome similarity was generally higher than we found with the multitaper method, but patterns of similarity and contrast effect sizes were similar or the same. Thus, although these changes were not great enough to change our conclusions, they did make the differences observed between the phase lag index and orthogonalized amplitude envelope correlation results less stark, highlighting how different spectral analysis methods can influence functional connectivity estimates if analysis parameters cannot be matched [cf. @bruns_FourierHilbertWaveletbased_2004].
 
 Another factor possibly contributing to the differences observed between the phase lag index and orthogonalized amplitude envelope correlation was the effect of epoch length on the two methods. @fraschinietal_EffectEpochLength_2016 compared the effect of non-overlapping epochs with variable length (1, 2, 4, 6, 8, 10, 12, 14 and 16 seconds) on broadband (1-20 Hz) functional connectivity estimates in a small sample of middle-aged adults during resting eyes-closed resting state. They found that epoch length affected both the magnitude of group-averaged mean functional connectivity and the distinctiveness of functional connectivity patterns. Specifically, group-averaged global functional connectivity was higher for the phase lag index than the orthogonalized amplitude envelope correlation at 1-6 second long epochs, with more comparable estimates between the two methods with 8-16 second long epochs; that group-averaged global functional connectivity decreased as a function of epoch length, with the phase lag index and orthogonalized amplitude envelope correlation stabilizing at 12 and 6 second long epochs, respectively; and that the distinctiveness of group-averaged functional connectivity patterns increased as a function of epoch length, with shorter epochs showing blurrier patterns relative to longer epochs where patterns became more distinct. Because Fraschini et al.'s [-@fraschinietal_EffectEpochLength_2016] results were based on broadband group-averaged global functional connectivity, they are not directly comparable to our own findings; however, they do highlight how preprocessing decisions can (differentially) influence functional connectivity estimates. In the context of our study, we emphasize the need for future work to explore how preprocessing decisions can influence individual-level functional connectivity and functional connectome similarity estimates, with a focus on identifying approaches that can achieve both high within-individual and low between-individual functional connectome similarity.
 
@@ -34,7 +34,7 @@ Factors that could explain the differences between our findings and what has bee
 
 Network variants are likely sensitive to the spatial resolution of the neuroimaging system used to study them, as this influences the precision with which individual differences in functional connectivity can be measured. For EEG, the number of electrodes and distance between them determines spatial resolution, with higher electrode density corresponding to higher spatial resolution [@ferreeetal_SpatialResolutionScalp_2001; @robinsonetal_VeryHighDensity_2017; @ryynanenetal_EffectElectrodeDensity_2004; @ryynanenetal_EffectMeasurementNoise_2006]. With low electrode density, as in the 10-20 system, EEG typically has a spatial resolution of approximately 5 to 9 centimetres [@burleetal_SpatialTemporalResolutions_2015; @srinivasanetal_EstimatingSpatialNyquist_1998]. Higher density EEG systems can achieve a spatial resolution of up to 1 to 2 centimetres, but this still falls short of the spatial resolution of fMRI, which typically ranges from 500 microns to 4 millimetres [@glover_OverviewFunctionalMagnetic_2011]. Because EEG functional connectomes are naturally spatially blurrier than fMRI functional connectomes, network variants may be harder to detect or less pronounced in EEG, leading to smaller, less consistent, differences in functional connectome similarity within versus between individuals.[^9] Future work might address this possibility either by testing how individual differences in functional connectome similarity vary as a function of electrode density, or by using simultaneous (source-space) EEG and fMRI [@mulert_SimultaneousEEGFMRI_2013] to compare the strength and consistency of network variants between the two modalities in the same sample.
 
-Network variants are also likely sensitive to the methods used to estimate functional connectivity. There are two assumptions related to this that are important to consider when evaluating our results, and which may be worth investigating in future research. First, we assumed that five minute recordings would be sufficient to get stable functional connectivity estimates with EEG given that (1) the longer scanning times needed to reliably detect network variants with fMRI is related to its low sampling rate [@seitzmanetal_TraitlikeVariantsHuman_2019], and not to the actual timeframe at which neural processes occur; and (2) EEG samples a substantially larger number of time points than fMRI in a much shorter timeframe. Because we found that functional connectomes were generally stable within individuals, showing moderate to high similarity within and between sessions and states across timescales, we believe this assumption was justified. However, we do note that longer recordings have been found to improve the stability of fMRI functional connectivity estimates in a qualitatively distinct way from higher sampling rates [@birnetal_EffectScanLength_2013], likely due to slow network changes being more fully captured by longer recordings. Future work may benefit from testing if the stability of EEG functional connectivity estimates gain a similar improvement from longer recordings, particularly at lower frequencies such as the delta band; such work would pair nicely with the identifying the optimal epoch length(s) for band-limited, individual-level functional connectivity analysis [cf. @fraschinietal_EffectEpochLength_2016], as we discussed in the previous section.
+Network variants are also likely sensitive to the methods used to estimate functional connectivity. There are two assumptions related to this that are important to consider when evaluating our results, and which may be worth investigating in future research. First, we assumed that five-minute recordings would be sufficient to get stable functional connectivity estimates with EEG given that (1) the longer scanning times needed to reliably detect network variants with fMRI is related to its low sampling rate [@seitzmanetal_TraitlikeVariantsHuman_2019], and not to the actual timeframe at which neural processes occur; and (2) EEG samples a substantially larger number of time points than fMRI in a much shorter timeframe. Because we found that functional connectomes were generally stable within individuals, showing moderate to high similarity within and between sessions and states across timescales, we believe this assumption was justified. However, we do note that longer recordings have been found to improve the stability of fMRI functional connectivity estimates in a qualitatively distinct way from higher sampling rates [@birnetal_EffectScanLength_2013], likely due to slow network changes being more fully captured by longer recordings. Future work may benefit from testing if the stability of EEG functional connectivity estimates gain a similar improvement from longer recordings, particularly at lower frequencies such as the delta band; such work would pair nicely with the identifying the optimal epoch length(s) for band-limited, individual-level functional connectivity analysis [cf. @fraschinietal_EffectEpochLength_2016], as we discussed in the previous section.
 
 Second, we assumed that network variants could be observed when considering only phase coupling and amplitude coupling with non-zero lag, discounting the true zero-lag coupling that occurs in functional networks. However, this discounting leads to an underestimation of true connectivity for both the phase lag index and amplitude envelope correlation by a non-trivial amount [@hippetal_LargescaleCorticalCorrelation_2012; @stametal_PhaseLagIndex_2007], and might also remove or attenuate individual-specific features of the functional connectome [@fraschinietal_RobustnessFunctionalConnectivity_2019]. Given that we generally found the strongest similarities between functional connectomes with homogeneously low patterns of coupling, non-zero lag phase and amplitude coupling methods may not be feasible for studying network variants in frequency bands where (1) the magnitude of coupling estimates is expected to be generally homogeneous for a given state, task, or functional connectivity metric; and (2) the chosen method of quantifying functional connectome similarity is sensitive to the distribution of coupling magnitudes. The most extreme examples of this in our study were with amplitude coupling functional connectomes in the delta, theta, beta, and gamma bands, where we found that unexpectedly high similarity within and between individuals was associated with functional connectomes with homogeneously low coupling estimates across EEG channel pairs for all connectomes (Figure A\@ref(fig:amplitude-similarity-delta-theta-beta-gamma)). As we discussed in the results section, these estimates were a statistically valid reflection of the data, given our method for quantifying functional connectome similarity; however, equally, we felt that they were neurophysiologically unrealistic, greatly exaggerating the magnitude of similarity between any pair of functional connectomes and failing to capture the intended nuance across participants, sessions, and states due to the limitations of our chosen method.
 
@@ -46,7 +46,7 @@ In addition to the discussion above, the following methodological and statistica
 
 First, it is unclear how our results might generalize to more diverse, larger samples. In particular, our participants were healthy young adults in their twenties sampled from a western, educated, industrialized, rich, and democratic population, who have been shown to be outliers on a number of behavioural and cognitive measures in comparison with the rest of the human population [@henrichetal_WeirdestPeopleWorld_2010]. Differences in functional connectivity have been found with ageing [e.g., @samoginetal_AgeRelatedDifferencesFrequencyDependent_2022], neurological disease or disorder [e.g., @engelsetal_DecliningFunctionalConnectivity_2015], mental illnesses such as depression [e.g., @shimetal_AlteredCorticalFunctional_2018], head trauma [e.g., @caoslobounov_AlterationCorticalFunctional_2010], and alcoholism [e.g., @caoetal_DisturbedConnectivityEEG_2014]; thus, it might be reasonable to expect that our exclusion criteria removed meaningful variation from our sample. Additionally, given the size of our sample, and the inconsistencies we observed across participants, we caution against generalizing our results to samples with similar characteristics. Instead, we stress the importance of future work examining these relationships in larger, more representative samples, whose results can then be combined using meta-analytic studies and other cumulative approaches in order to come to more generalized scientific conclusions  about electrophysiological network variants [@amrheinetal_InferentialStatisticsDescriptive_2019; @berneramrhein_WhyHowWe_2021; @nicholsetal_AccumulatingEvidenceEcology_2019; @nicholsetal_BetterApproachDealing_2021]. Based on the results of our study, at most we might conclude that---if network variants can be reliably detected with EEG---there is no guarantee that their presence can be detected in a given individual or data set, given the background models used to estimate functional connectivity, functional connectome similarity, and interindividual differences across contexts.
 
-Second, we assumed that the connectivity structure in each frequency band was stationary over the length of the recording for both phase and amplitude coupling functional connectomes. Although neural oscillations are naturally non-stationary, varying from moment to moment [@faisaletal_NoiseNervousSystem_2008], stationary patterns of functional connectivity during resting state have been identified in EEG [e.g., @olguin-rodriguezetal_CharacteristicFluctuationsStable_2018], fMRI [e.g., @laumannetal_StabilityBOLDFMRI_2017], and simultaneous EEG-fMRI studies [e.g., @danielarzate-menaetal_StationaryEEGPattern_2022], with consistent positive or negative coupling occurring between sites or electrodes, even when averaging over multiple epochs. These stationary patterns are thought to be the substrate for effective brain function, permitting the adaptability and efficiency needed to optimize responses to our often unpredictable environment [@garrettetal_MomenttomomentBrainSignal_2013], and thus reflect neuropsychologically relevant signals of interest. However, we do note that approaches accounting for nonlinear dynamics may provide complimentary insights to those that focus on the stable aspects of network variants. For example, @vandevilleetal_WhenMakesYou_2021 found that fMRI functional connectomes exhibit short transient bursts of uniqueness even at short time windows, with different resting state networks becoming more or less unique between individuals as a function of time window length, suggesting that the dynamic aspects of network variants are worth exploring.
+Second, we assumed that the connectivity structure in each frequency band was stationary over the length of the recording for both phase and amplitude coupling functional connectomes. Although neural oscillations are naturally non-stationary, varying from moment to moment [@faisaletal_NoiseNervousSystem_2008], stationary patterns of functional connectivity during resting state have been identified in EEG [e.g., @olguin-rodriguezetal_CharacteristicFluctuationsStable_2018], fMRI [e.g., @laumannetal_StabilityBOLDFMRI_2017], and simultaneous EEG-fMRI studies [e.g., @danielarzate-menaetal_StationaryEEGPattern_2022], with consistent positive or negative coupling occurring between sites or electrodes, even when averaging over multiple epochs. These stationary patterns are thought to be the substrate for effective brain function, permitting the adaptability and efficiency needed to optimize responses to our often-unpredictable environment [@garrettetal_MomenttomomentBrainSignal_2013], and thus reflect neuropsychologically relevant signals of interest. However, we do note that approaches accounting for nonlinear dynamics may provide complimentary insights to those that focus on the stable aspects of network variants. For example, @vandevilleetal_WhenMakesYou_2021 found that fMRI functional connectomes exhibit short transient bursts of uniqueness even at short time windows, with different resting state networks becoming more or less unique between individuals as a function of time window length, suggesting that the dynamic aspects of network variants are worth exploring.
 
 Third, we limited our investigation to within-frequency analyses of functional connectivity and network similarity. Although cross-frequency coupling is also considered to be a key mechanism by which the brain transmits and processes information, integrating functional systems across multiple spatiotemporal scales [@canoltyknight_FunctionalRoleCrossfrequency_2010], we did not explore for the presence of network variants in cross-frequency coupling functional connectomes given that most research on cross-frequency coupling focuses on coupling within brain regions or between a small number of regions of interest, rather than the entire connectome. Only a handful of studies have demonstrated that cross-frequency coupling also occurs in whole brain functional networks [@keiteletal_VisualCortexResponses_2017; @siebenhuhneretal_CrossfrequencySynchronizationConnects_2016; @palva_PhaseSynchronyNeuronal_2005; @vandermeijetal_PhaseAmplitudeCouplingHuman_2012], and the validity of these findings has recently come into question due to standard cross-frequency coupling analyses showing significant cross-frequency coupling in the absence of any underlying physiological coupling [@aruetal_UntanglingCrossfrequencyCoupling_2015]. Recently, however, @siebenhuhneretal_GenuineCrossfrequencyCoupling_2020 were able to demonstrate the presence of true cross-frequency coupling in whole brain functional networks---ruling out the influence of spurious coupling---in both a small sample of presurgical epilepsy patients during eyes-closed resting state using stereo-EEG, and a small sample of healthy controls during eyes-open resting state using magnetoencephalography. Moreover, they found that network strength was predictive of individual differences on several cognitive tasks in the healthy control sample (the other sample did not complete these tasks); thus, cross-frequency coupling may be a worthwhile avenue for future EEG network variant research if methods for estimating true cross-frequency coupling are validated, improved, and made more accessible [e.g., @idajietal_HarmoniMethodEliminating_2022].
 
