--- a/manuscripts/child-documents/introduction.Rmd
+++ b/manuscripts/child-documents/introduction.Rmd
@@ -8,7 +8,7 @@ Over the last two decades, convergent findings from group-averaged fMRI studies 
 
 However, following the discovery of a stable intrinsic organization of the group-averaged human functional connectome, a growing number of studies using fMRI [@bijsterboschetal_RelationshipSpatialConfiguration_2018; @finnetal_FunctionalConnectomeFingerprinting_2015; @gordonetal_IndividualVariabilitySystemLevel_2017; @gordonetal_PrecisionFunctionalMapping_2017; @gordonetal_IndividualspecificFeaturesBrain_2017; @grattonetal_FunctionalBrainNetworks_2018; @kongetal_SpatialTopographyIndividualSpecific_2019; @krausetal_NetworkVariantsAre_2021; @miranda-dominguezetal_ConnectotypingModelBased_2014; @muelleretal_IndividualVariabilityFunctional_2013; @seitzmanetal_TraitlikeVariantsHuman_2019; @smithetal_BrainHubsDefined_2023]---and to a lesser extent---EEG [@nentwichetal_FunctionalConnectivityEEG_2020] and MEG [@colcloughetal_HowReliableAre_2016] have identified reliable and substantial variability in functional connectome organization across *every* individual studied so far that is either underestimated or missed entirely by group-averaged models of the human functional connectome [@fedorenko_EarlyOriginsGrowing_2021; @fedorenkoblank_BrocaAreaNot_2020; @gordonetal_PrecisionFunctionalMapping_2017; @gordonnelson_ThreeTypesIndividual_2021; @muelleretal_IndividualVariabilityFunctional_2013; @speelmanmcgann_HowMeanMean_2013; @zillesamunts_IndividualVariabilityNot_2013]. This has been demonstrated using a variety of approaches. For example, using community detection algorithms, @laumannetal_FunctionalSystemAreal_2015 found evidence of an idiosyncratic spatial organization between individual and group-averaged functional connectomes such that certain functional networks present in the individual were not present in the group (and vice versa); comparing spatial correlations between individual and group-averaged functional connectomes, @seitzmanetal_TraitlikeVariantsHuman_2019 found similar evidence of an idiosyncratic spatial organization across individuals, wherein certain spatially contiguous cortical regions were weakly correlated between individual and group-averaged functional connectomes (the location, size, and functional network assignments of these regions differed across individuals); and comparing functional connectome similarity between and within individuals, @grattonetal_FunctionalBrainNetworks_2018 found that functional connectomes were consistently more similar within than between individuals regardless of varying cognitive demands or time. Borrowing from @seitzmanetal_TraitlikeVariantsHuman_2019, here we use the term *network variants* as a catch-all shorthand to refer to individual differences in functional connectome organization relative to either a group-averaged functional connectome or other individuals' functional connectomes. These individual differences may present themselves in several forms, including interindividual variability in connectivity strength, the size and position of network nodes, or network topography [@gordonnelson_ThreeTypesIndividual_2021; @uddinetal_ControversiesProgressStandardization_2023].
 
-The purpose of this thesis is to explore the feasibility of studying network variants with EEG, addressing the growing need to incorporate findings derived from neurophysiological imaging modalities in order to enrich our understanding of individual differences in whole brain functional network organization beyond what can be learned from fMRI alone [@grattonetal_FunctionalBrainNetworks_2018; @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020; @uddinetal_ControversiesProgressStandardization_2023]. Whereas the first studies of the group-averaged human functional connectome using fMRI date back to the mid-2000s [e.g., @beckmannetal_InvestigationsRestingstateConnectivity_2005], studies using EEG/MEG did not begin until the early 2010s [e.g., @brookesetal_MeasuringFunctionalConnectivity_2011], and the investigation and characterization of whole brain functional networks continues to be heavily biased towards fMRI research methods [@uddinetal_ControversiesProgressStandardization_2023]. Likewise, although the first studies of network variants using fMRI date back to the early 2010s [e.g., @muelleretal_IndividualVariabilityFunctional_2013], we are only aware of one recently published study using EEG [@nentwichetal_FunctionalConnectivityEEG_2020] and another using MEG [@colcloughetal_HowReliableAre_2016]; thus, current knowledge about network variants is almost exclusively based on infraslow frequency functional connectomes measured with fMRI, and it is an open question whether or not higher frequency functional connectomes measured with neuroimaging modalities such as EEG share similar evidence of stable individual differences [@grattonetal_FunctionalBrainNetworks_2018; @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020]. Here we take one modest step towards addressing this question.
+The purpose of this thesis is to explore the feasibility of studying network variants with EEG, addressing the growing need to incorporate findings derived from neurophysiological imaging modalities to enrich our understanding of individual differences in whole brain functional network organization beyond what can be learned from fMRI alone [@grattonetal_FunctionalBrainNetworks_2018; @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020; @uddinetal_ControversiesProgressStandardization_2023]. Whereas the first studies of the group-averaged human functional connectome using fMRI date back to the mid-2000s [e.g., @beckmannetal_InvestigationsRestingstateConnectivity_2005], studies using EEG/MEG did not begin until the early 2010s [e.g., @brookesetal_MeasuringFunctionalConnectivity_2011], and the investigation and characterization of whole brain functional networks continues to be heavily biased towards fMRI research methods [@uddinetal_ControversiesProgressStandardization_2023]. Likewise, although the first studies of network variants using fMRI date back to the early 2010s [e.g., @muelleretal_IndividualVariabilityFunctional_2013], we are only aware of one recently published study using EEG [@nentwichetal_FunctionalConnectivityEEG_2020] and another using MEG [@colcloughetal_HowReliableAre_2016]; thus, current knowledge about network variants is almost exclusively based on infraslow frequency functional connectomes measured with fMRI, and it is an open question whether or not higher frequency functional connectomes measured with neuroimaging modalities such as EEG share similar evidence of stable individual differences [@grattonetal_FunctionalBrainNetworks_2018; @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020]. Here we take one modest step towards addressing this question.
 
 The remainder of the introduction is organized as follows: First, we review the intrinsic functional organization of the human brain, focusing on the features of computation and communication in neuronal networks that functional connectivity analysis seeks to (at least partly) quantify. Second, we review oscillatory neural signals measured by fMRI and EEG and their connection to underlying neuronal activity, as well as some of the challenges fMRI and EEG face in the pursuit of studying network variants. Third, we provide an overview of functional connectivity analysis, with a focus on methodology in order to build intuition around the interpretation of phase coupling and amplitude coupling. Fourth, we provide background on the motivations for network variant research, followed by a review of key findings. Finally, we introduce the study conducted for this thesis.
 
@@ -64,7 +64,7 @@ To date, two main approaches have been employed throughout the literature to add
 
 <!-- Source-reconstructed EEG is generally a resource-demanding method, requiring the same resources as fMRI in addition to an EEG or simultaneous fMRI-EEG system; however, it is possible to reduce resource demands by using a template MRI of an average human head rather than individual MRI scans for the forward model [@michelbrunet_EEGSourceImaging_2019]. Whether or not it is appropriate to use a template MRI for source-reconstructed EEG network variant studies is an open question. While the advantages of using individual MRI scans for the forward model are obvious---and there is sufficient evidence that using a template MRI results in less precise source localization [@brodbecketal_ElectroencephalographicSourceImaging_2011; @guggisbergetal_LocalizationCorticoperipheralCoherence_2011]---no study to date has investigated how the variability of functional connectome organization changes between and within individuals when using individual or template MRIs. Rather than speculate, here we simply note that in cases where a template MRI is used (or where analyses are done in sensor space rather than source space), EEG is a portable and less resource-demanding method relative to fMRI, with research-grade systems typically costing anywhere from around \$30,000 to \$100,000 depending on the configuration, negligible recording costs, and shorter recording times (due to the high sampling rate), making it a potentially more accessible method to a broader population of researchers and research participants [@ledwidgeetal_RecommendationsDevelopingEEG_2018], including those from lower-income and middle-income countries [@bhavnanietal_AcceptabilityFeasibilityUtility_2022; cf. @nguyen-danseetal_FeasibilityReconstructingSource_2021]. -->
 
-The second approach to addressing the challenges caused by volume conduction is to use functional connectivity metrics that are unlikely to be explained by common sources, and are thus robust to volume conduction [@nolteetal_IdentifyingTrueBrain_2004; @stametal_PhaseLagIndex_2007]. A variety of robust functional connectivity metrics have been developed to accomplish this [@bastosschoffelen_TutorialReviewFunctional_2016; @hippetal_LargescaleCorticalCorrelation_2012], all of which operate under the same basic principle: Because volume conduction from a common source to multiple electrodes is instantaneous, electrodes measuring a common source will have their signals phase locked with a time lag of zero; conversely, phase locking with a nonzero time lag cannot be caused by volume conduction from a common source, so signals with a consistent nonzero phase difference are likely to have been generated by separate sources [@nolteetal_IdentifyingTrueBrain_2004; @stametal_PhaseLagIndex_2007]. Functional connectivity between such signals can, therefore, be interpreted in terms of true interactions between the underlying neuronal sources [@nolteetal_IdentifyingTrueBrain_2004; @stametal_PhaseLagIndex_2007]. However, it is important to note that true zero lag interactions also occur in neuronal networks [@golloetal_MechanismsZeroLagSynchronization_2014], and it is likely that this approach misses parts of the brain's interactions, leading to the underestimation of connectivity strength between nodes [@cohen_EffectsTimeLag_2015; @nolteetal_IdentifyingTrueBrain_2004; @stametal_PhaseLagIndex_2007]. Thus, weak or absent functional connectivity with these metrics could either mean there truly is no interaction, or that the interaction between two sources is not consistently delayed such that one of the sources regularly leads or lags the other one [@nolteetal_IdentifyingTrueBrain_2004; @stametal_PhaseLagIndex_2007].
+The second approach to addressing the challenges caused by volume conduction is to use functional connectivity metrics that are unlikely to be explained by common sources and are thus robust to volume conduction [@nolteetal_IdentifyingTrueBrain_2004; @stametal_PhaseLagIndex_2007]. A variety of robust functional connectivity metrics have been developed to accomplish this [@bastosschoffelen_TutorialReviewFunctional_2016; @hippetal_LargescaleCorticalCorrelation_2012], all of which operate under the same basic principle: Because volume conduction from a common source to multiple electrodes is instantaneous, electrodes measuring a common source will have their signals phase locked with a time lag of zero; conversely, phase locking with a nonzero time lag cannot be caused by volume conduction from a common source, so signals with a consistent nonzero phase difference are likely to have been generated by separate sources [@nolteetal_IdentifyingTrueBrain_2004; @stametal_PhaseLagIndex_2007]. Functional connectivity between such signals can, therefore, be interpreted in terms of true interactions between the underlying neuronal sources [@nolteetal_IdentifyingTrueBrain_2004; @stametal_PhaseLagIndex_2007]. However, it is important to note that true zero lag interactions also occur in neuronal networks [@golloetal_MechanismsZeroLagSynchronization_2014], and it is likely that this approach misses parts of the brain's interactions, leading to the underestimation of connectivity strength between nodes [@cohen_EffectsTimeLag_2015; @nolteetal_IdentifyingTrueBrain_2004; @stametal_PhaseLagIndex_2007]. Thus, weak or absent functional connectivity with these metrics could either mean there truly is no interaction, or that the interaction between two sources is not consistently delayed such that one of the sources regularly leads or lags the other one [@nolteetal_IdentifyingTrueBrain_2004; @stametal_PhaseLagIndex_2007].
 
 Finally, because EEG measures oscillations across a broad range of frequencies, and because neuronal populations are capable of generating and responding to multiple oscillation frequencies, it is generally necessary to further process EEG signals into single or multiple frequency bands using band-pass filtering in order to investigate oscillations occurring at different timescales [@sadaghianiwirsich_IntrinsicConnectomeOrganization_2020]. EEG is typically limited to investigating canonical frequency bands (i.e., Delta, 1-4 Hz; Theta, 4-8 Hz; Alpha, 8-13 Hz; Beta, 13-30 Hz; Gamma, 30-80 Hz). Furthermore, because of EEG's susceptibility to 60 Hz electrical line noise, the upper bound of the Gamma band is often reduced to a frequency below 60 Hz where artifacts from line noise are less prominent.
 
@@ -94,7 +94,7 @@ To date, two distinct modes of same-frequency intrinsic coupling have been ident
 
 ```{r phase-plot}
 #| fig.height: 5.445434
-#| fig.cap: Illustration of instantaneous phase angle differences between two phase-coupled signals (A) and independent signals (B). The top plots in each panel depict the time course of two 5 Hz signals with a 145 degree phase (Signal 1) and 25 degree phase (Signal 2), and Gaussian white noise (Signal 3). The polar histogram plots depict the distribution of instantaneous phase angle differences between phase-coupled Signals 1 and 2 (A) and independent Signals 1 and 3 (B); a narrow peak in the instantaneous phase angle difference distribution can be observed with the phase-coupled signals, in contrast to the relatively even distribution of instantaneous phase angle differences with the independent signals.
+#| fig.cap: Illustration of instantaneous phase angle differences between two phase-coupled signals (A) and independent signals (B). The top plots in each panel depict the time course of two 5 Hz signals with a 145-degree phase (Signal 1) and 25-degree phase (Signal 2), and Gaussian white noise (Signal 3). The polar histogram plots depict the distribution of instantaneous phase angle differences between phase-coupled Signals 1 and 2 (A) and independent Signals 1 and 3 (B); a narrow peak in the instantaneous phase angle difference distribution can be observed with the phase-coupled signals, in contrast to the relatively even distribution of instantaneous phase angle differences with the independent signals.
 knitr::include_graphics(here::here("figures", "phase-plot.png"))
 ```
 
@@ -160,7 +160,7 @@ Although such possibilities have yet to be directly addressed, several studies h
 
 ## The present study
 
-The purpose of the present study is to explore the feasibility of studying network variants with EEG across several canonical frequency bands using measures of both phase coupling and amplitude coupling. To address this question we used EEG data from fourteen participants previously collected by our lab as part of a larger study, containing a total of 30 minutes eyes open resting state data (over 6 recordings) and 30 minutes eyes closed resting state data (over 6 recordings) from each participant collected during three sessions over the course of approximately three months. Each session consisted of four 5 minute recordings (2 eyes open, 2 eyes closed), with the time between sessions ranging from approximately one to two weeks from the first to second session, and approximately three months from the second to third session. With this design we were able to explore how functional connectomes differed within and between individuals, sessions, and states, and thus, whether or not higher frequency functional connectomes measured with EEG share similar evidence of stable individual differences to what has been described in the fMRI literature [e.g., @gordonetal_PrecisionFunctionalMapping_2017; @grattonetal_FunctionalBrainNetworks_2018]. Specifically, we were interested in how much and in which ways patterns of sensor-space connectivity strength varied within and between individuals across these different contexts.
+The purpose of the present study is to explore the feasibility of studying network variants with EEG across several canonical frequency bands using measures of both phase coupling and amplitude coupling. To address this question, we used EEG data from fourteen participants previously collected by our lab as part of a larger study, containing a total of 30 minutes eyes open resting state data (over 6 recordings) and 30 minutes eyes closed resting state data (over 6 recordings) from each participant collected during three sessions over the course of approximately three months. Each session consisted of four 5-minute recordings (2 eyes open, 2 eyes closed), with the time between sessions ranging from approximately one to two weeks from the first to second session, and approximately three months from the second to third session. With this design we were able to explore how functional connectomes differed within and between individuals, sessions, and states, and thus, whether or not higher frequency functional connectomes measured with EEG share similar evidence of stable individual differences to what has been described in the fMRI literature [e.g., @gordonetal_PrecisionFunctionalMapping_2017; @grattonetal_FunctionalBrainNetworks_2018]. Specifically, we were interested in how much and in which ways patterns of sensor-space connectivity strength varied within and between individuals across these different contexts.
 
 To facilitate these comparisons, we estimated the strength of sensor-space connectivity using the phase lag index [PLI\; @stametal_PhaseLagIndex_2007] and the orthogonalized amplitude envelope correlation [AEC\; @hippetal_LargescaleCorticalCorrelation_2012], which measure phase coupling and amplitude coupling, respectively. We then used matrix correlations to quantify the similarity between pairs of functional connectomes, reducing the dimensionality of these data to a single interpretable number suitable for subsequent analyses, which served as an index of (inter)individual differences in underlying global network activity. These correlations take values between 0 (no linear relationship) and 1 (perfect linear relationship), defining a scale of similarity between two functional connectomes that can be interpreted in a straightforward manner in much the same way as the familiar squared Pearson correlation coefficient [@josseholmes_MeasuringMultivariateAssociation_2016; @mayeretal_ExploratoryAnalysisMultiple_2011].
 
@@ -194,7 +194,7 @@ knitr::include_graphics(here::here("figures/outcome-plot.png"))
 
 Based on the findings of previous fMRI network variant research [e.g., @grattonetal_FunctionalBrainNetworks_2018; @seitzmanetal_TraitlikeVariantsHuman_2019], we expected to find patterns of results consistent with the fourth plot in Figure \@ref(fig:outcome-plot) across all frequency bands for both phase coupling and amplitude coupling functional connectomes---consistent with functional connectomes that were more similar within than between individuals across all contrasts, with greater variations in similarity related to state than session. However, we emphasize that any of the result patterns depicted in Figure \@ref(fig:outcome-plot) would provide supportive evidence of stable individual differences in EEG functional connectomes, albeit with somewhat different interpretations as we described above for the individual, individual-session, and individual-state effects. Thus, our primary scientific hypothesis was that if the phase coupling and/or amplitude coupling dynamics of underlying global network activity in a given frequency band was influenced by stable individual-dependent factors *in our sample*, then functional connectomes would be more similar within than between individuals across all contrasts, on average, with smaller variations in similarity related to session or state.
 
-We had no expectations regarding the possible range of effect sizes we could find, but again note that relatively higher values correspond to greater within-individual functional connectome stability and between-individual differentiation across contexts; whereas relatively lower values correspond to lesser within-individual functional connectome stability and between-individual differentiation. Thus, we reiterate the importance of considering the range of effect sizes most compatible with our data (given our background model) when drawing conclusions about our primary scientific hypothesis, rather than merely drawing conclusions based on the direction of these effects and whether or not they included zero [@amrheinetal_InferentialStatisticsDescriptive_2019]. Additionally, to contextualize our results against the relevant fMRI literature, we considered the results of @grattonetal_FunctionalBrainNetworks_2018 as a cautious point of reference, keeping in mind that finding equivalent effect sizes would be surprising, given the differences in measurement, design, and analysis between our studies, on top of random variation in the data between our samples. In their study, @grattonetal_FunctionalBrainNetworks_2018 investigated how functional connectome similarity---measured using the Pearson correlation coefficient between the vectorized lower triangles of each functional connectome pair---differed within and between individuals across ten separate fMRI sessions and five different states (eyes-open resting state, and visual coherence, semantic, memory, and motor tasks). They found that functional connectomes were more similar within participants than between participants across contexts, on average, at both the group-level and individual-level by approximately 0.2 points ($\mathrm{Mean_{within}} = 0.556$, $\mathrm{Mean_{between}} = 0.357$) on the response scale when functional connectivity was estimated at the recording level, and by approximately 0.3 points ($\mathrm{Mean_{within}} = 0.795$, $\mathrm{Mean_{between}} = 0.512$) on the response scale when functional connectivity was estimated using the split-half method (see, respectively, Figures S2 and 3 in @grattonetal_FunctionalBrainNetworks_2018).[^5] A similarity matrix for the eyes-open resting state functional connectomes from this sample was also reported by this group of researchers in a separate study, which showed individual differences in functional connectome similarity of a similar magnitude across sessions to those discussed above (see Figure 2H in @gordonetal_PrecisionFunctionalMapping_2017).
+We had no expectations regarding the possible range of effect sizes we could find, but again note that relatively higher values correspond to greater within-individual functional connectome stability and between-individual differentiation across contexts, whereas relatively lower values correspond to lesser within-individual functional connectome stability and between-individual differentiation. Thus, we reiterate the importance of considering the range of effect sizes most compatible with our data (given our background model) when drawing conclusions about our primary scientific hypothesis, rather than merely drawing conclusions based on the direction of these effects and whether or not they included zero [@amrheinetal_InferentialStatisticsDescriptive_2019]. Additionally, to contextualize our results against the relevant fMRI literature, we considered the results of @grattonetal_FunctionalBrainNetworks_2018 as a cautious point of reference, keeping in mind that finding equivalent effect sizes would be surprising, given the differences in measurement, design, and analysis between our studies, on top of random variation in the data between our samples. In their study, @grattonetal_FunctionalBrainNetworks_2018 investigated how functional connectome similarity---measured using the Pearson correlation coefficient between the vectorized lower triangles of each functional connectome pair---differed within and between individuals across ten separate fMRI sessions and five different states (eyes-open resting state, and visual coherence, semantic, memory, and motor tasks). They found that functional connectomes were more similar within participants than between participants across contexts, on average, at both the group-level and individual-level by approximately 0.2 points ($\mathrm{Mean_{within}} = 0.556$, $\mathrm{Mean_{between}} = 0.357$) on the response scale when functional connectivity was estimated at the recording level, and by approximately 0.3 points ($\mathrm{Mean_{within}} = 0.795$, $\mathrm{Mean_{between}} = 0.512$) on the response scale when functional connectivity was estimated using the split-half method (see, respectively, Figures S2 and 3 in @grattonetal_FunctionalBrainNetworks_2018).[^5] A similarity matrix for the eyes-open resting state functional connectomes from this sample was also reported by this group of researchers in a separate study, which showed individual differences in functional connectome similarity of a similar magnitude across sessions to those discussed above (see Figure 2H in @gordonetal_PrecisionFunctionalMapping_2017).
 
 Finally, given our focus on individual differences, we considered it naturally important to investigate outcome variability of these effects across participants; particularly because network variants have been characterized as a common phenomenon present in all individuals, rather than an idiosyncrasy of just a few individuals [@seitzmanetal_TraitlikeVariantsHuman_2019]. This served as a compliment to the group-level analysis of individual differences described above, allowing us to evaluate whether the group-level outcomes we observed would hold at the level of individuals (i.e., the level of observation where these differences originated from) in terms of the direction of these effects. Indeed, a central aim of investigating outcome variability was to dispel any misconceptions about the implications of our findings that could be caused by focusing only on the group-level outcomes---which can lead even highly trained experts to overestimate the importance and generalizability of findings due to uncertainty about average effects often being quite precise even in the presence of substantial outcome variability [@zhangetal_IllusionPredictabilityScientific_2022].
 
@@ -210,6 +210,6 @@ Finally, given our focus on individual differences, we considered it naturally i
 
 [^4]: To be clear, this is not to say that brain state or time have no influence on interindividual variability in connectivity strength. Indeed, the relative magnitude of functional connectome similarities within and between individuals has been found to vary moderately by behavioural or cognitive state and mildly by time such that individualization is measurably greater during certain brain states than others, and slightly greater for recordings taken during the same session [@finnetal_CanBrainState_2017; @grattonetal_FunctionalBrainNetworks_2018; @seitzmanetal_TraitlikeVariantsHuman_2019]. However, this influence is considerably smaller relative to the influence contributed by individuals themselves [@grattonetal_FunctionalBrainNetworks_2018].
 
-[^5]: These values correspond to the *main effect* contrasts in our study and were obtained by back-transforming the Fisher-transformed Pearson correlation coefficients for the group and individual effects reported in @grattonetal_FunctionalBrainNetworks_2018, then taking their difference. For the split-half method, functional connectivity was estimated for each individual and task on the basis of two 5 session groups (by concatenating the recordings from a given task in each group together to increase the reliability of functional connectivity estimates), rather than at the recording level (for further details, see @grattonetal_FunctionalBrainNetworks_2018).
+[^5]: These values correspond to the *main effect* contrasts in our study and were obtained by back-transforming the Fisher-transformed Pearson correlation coefficients for the group and individual effects reported in @grattonetal_FunctionalBrainNetworks_2018, then taking their difference. For the split-half method, functional connectivity was estimated for each individual and task on the basis of two 5-session groups (by concatenating the recordings from a given task in each group together to increase the reliability of functional connectivity estimates), rather than at the recording level (for further details, see @grattonetal_FunctionalBrainNetworks_2018).
 
 <!-- Footnotes end ----------------------------------------------------------->
