--- a/manuscripts/child-documents/methods.Rmd
+++ b/manuscripts/child-documents/methods.Rmd
@@ -11,7 +11,7 @@ tar_load(participant_descriptives)
 tar_load(participant_descriptives_final)
 ```
 
-`r stringr::str_to_sentence(xfun::numbers_to_words(participant_descriptives$n))` healthy adults (`r participant_descriptives$male` males, `r participant_descriptives$female` females) whose ages ranged from `r participant_descriptives$years_age_min` to `r participant_descriptives$years_age_max` years (M = `r papaja::apa_num(participant_descriptives$years_age_mean)`, SD = `r papaja::apa_num(participant_descriptives$years_age_sd)`) and whose years of education ranged from `r participant_descriptives$years_education_min` to `r participant_descriptives$years_education_max` years (M = `r papaja::apa_num(participant_descriptives$years_education_mean)`, SD = `r papaja::apa_num(participant_descriptives$years_education_sd)`) participated in the original study. All participants were right handed, spoke English as a first language, and had normal or corrected-to-normal vision. Exclusion criteria included a history of neurological disease or disorder, mental illness, head trauma, alcoholism or drug abuse, or use of psychotropic medications in the last two years preceding data collection, as determined through a screening questionnaire. We excluded EEG data for analysis from four participants because they did not participate in the final session, and three participants because they had one or more recordings with excessive noise. The final sample used for analysis consisted of `r xfun::numbers_to_words(participant_descriptives_final$n)` participants (`r participant_descriptives_final$male` males, `r participant_descriptives_final$female` females) whose ages ranged from `r participant_descriptives_final$years_age_min` to `r participant_descriptives_final$years_age_max` years (M = `r papaja::apa_num(participant_descriptives_final$years_age_mean)`, SD = `r papaja::apa_num(participant_descriptives_final$years_age_sd)`) and whose years of education ranged from `r participant_descriptives_final$years_education_min` to `r participant_descriptives_final$years_education_max` years (M = `r papaja::apa_num(participant_descriptives_final$years_education_mean)`, SD = `r papaja::apa_num(participant_descriptives_final$years_education_sd)`).
+`r stringr::str_to_sentence(xfun::numbers_to_words(participant_descriptives$n))` healthy adults (`r participant_descriptives$male` males, `r participant_descriptives$female` females) whose ages ranged from `r participant_descriptives$years_age_min` to `r participant_descriptives$years_age_max` years (M = `r papaja::apa_num(participant_descriptives$years_age_mean)`, SD = `r papaja::apa_num(participant_descriptives$years_age_sd)`) and whose years of education ranged from `r participant_descriptives$years_education_min` to `r participant_descriptives$years_education_max` years (M = `r papaja::apa_num(participant_descriptives$years_education_mean)`, SD = `r papaja::apa_num(participant_descriptives$years_education_sd)`) participated in the original study. All participants were right-handed, spoke English as a first language, and had normal or corrected-to-normal vision. Exclusion criteria included a history of neurological disease or disorder, mental illness, head trauma, alcoholism or drug abuse, or use of psychotropic medications in the last two years preceding data collection, as determined through a screening questionnaire. We excluded EEG data for analysis from four participants because they did not participate in the final session, and three participants because they had one or more recordings with excessive noise. The final sample used for analysis consisted of `r xfun::numbers_to_words(participant_descriptives_final$n)` participants (`r participant_descriptives_final$male` males, `r participant_descriptives_final$female` females) whose ages ranged from `r participant_descriptives_final$years_age_min` to `r participant_descriptives_final$years_age_max` years (M = `r papaja::apa_num(participant_descriptives_final$years_age_mean)`, SD = `r papaja::apa_num(participant_descriptives_final$years_age_sd)`) and whose years of education ranged from `r participant_descriptives_final$years_education_min` to `r participant_descriptives_final$years_education_max` years (M = `r papaja::apa_num(participant_descriptives_final$years_education_mean)`, SD = `r papaja::apa_num(participant_descriptives_final$years_education_sd)`).
 
 ### Electrophysiological Data Acquisition
 
@@ -31,7 +31,7 @@ runtime <- targets::tar_meta(fields = "seconds") |>
   papaja::print_num()
 ```
 
-All computational steps were done using the open source programming language R [version `r r_version`, <https://www.R-project.org/>\; @R-base]. We maintained a reproducible workflow for the entire pipeline---from data cleaning to reporting---using the targets package [@R-targets], and managed R and Python dependencies using the renv package [@R-renv]. All EEG preprocessing and functional connectivity analysis was done using the open source Python package MNE-Python [version 2.2.0, <https://doi.org/10.5281/zenodo.4338426>\; @gramfortetal_MEGEEGData_2013], which was called from R using the reticulate package [@R-reticulate]. We estimated the RV coefficient using the FactoMineR package [@R-FactoMineR], and fit the mixed beta regression and contrasts using the glmmTMB [@R-glmmTMB] and emmeans [@R-emmeans] packages, respectively. The DHARMa [@R-DHARMa] and performance [@R-performance] packages were used for model diagnostics. All data visualization was done with a combination of the ggplot2 [@R-ggplot2], ggdist [@R-ggdist], ggh4x [@R-ggh4x], ggnewscale [@R-ggnewscale], and patchwork [@R-patchwork] packages; and all tables were made with a combination of the flextable [@R-flextable], ftExtra [@R-ftExtra], and gtsummary [@R-gtsummary] packages. Other computations were done using the tidyverse [@R-tidyverse] suite of packages. Finally, this manuscript itself was written in R Markdown [@R-rmarkdown] using officedown [@R-officedown] with the papaja package's APA template [@R-papaja], and all reported numbers, figures, and tables were printed using inline code to ensure their accuracy.
+All computational steps were done using the open-source programming language R [version `r r_version`, <https://www.R-project.org/>\; @R-base]. We maintained a reproducible workflow for the entire pipeline---from data cleaning to reporting---using the targets package [@R-targets], and managed R and Python dependencies using the renv package [@R-renv]. All EEG preprocessing and functional connectivity analysis was done using the open-source Python package MNE-Python [version 2.2.0, <https://doi.org/10.5281/zenodo.4338426>\; @gramfortetal_MEGEEGData_2013], which was called from R using the reticulate package [@R-reticulate]. We estimated the RV coefficient using the FactoMineR package [@R-FactoMineR], and fit the mixed beta regression and contrasts using the glmmTMB [@R-glmmTMB] and emmeans [@R-emmeans] packages, respectively. The DHARMa [@R-DHARMa] and performance [@R-performance] packages were used for model diagnostics. All data visualization was done with a combination of the ggplot2 [@R-ggplot2], ggdist [@R-ggdist], ggh4x [@R-ggh4x], ggnewscale [@R-ggnewscale], and patchwork [@R-patchwork] packages; and all tables were made with a combination of the flextable [@R-flextable], ftExtra [@R-ftExtra], and gtsummary [@R-gtsummary] packages. Other computations were done using the tidyverse [@R-tidyverse] suite of packages. Finally, this manuscript itself was written in R Markdown [@R-rmarkdown] using officedown [@R-officedown] with the papaja package's APA template [@R-papaja], and all reported numbers, figures, and tables were printed using inline code to ensure their accuracy.
 
 The total computation time for the entire targets pipeline was approximately `r runtime` hours. A complete record of the R environment and packages used in this study can be found in Tables B\@ref(tab:session-info-environment) and B\@ref(tab:session-info-packages) in Appendix B. All code used in this study is openly available, licensed under the MIT License, and can be accessed at the study's GitHub repository <https://github.com/mccarthy-m-g/mccarthy_EEGNetworkVariants_2024> or Open Science Framework (OSF) repository <https://osf.io/xztdk/> (DOI: <https://doi.org/10.5281/zenodo.6578410>). A copy of this licence and its terms can be found in the study's GitHub or OSF repository.
 
@@ -72,7 +72,7 @@ bad_segments_duration_totals_sd   <- sd(bad_segments_duration_totals)
 
 Raw EEG data was preprocessed to remove noise and non-neural artifacts from the data using the following steps. First, following recommendations by @widmannetal_DigitalFilterDesign_2015, a two-pass forward and reverse, zero-phase, non-causal band-pass finite impulse response filter was used to remove slow drift potentials at infraslow frequencies less than 0.10 Hz, line noise at 60.00 Hz, and irrelevant noise fluctuations greater than 60.00 Hz [@decheveignenelken_FiltersWhenWhy_2019; @widmannetal_DigitalFilterDesign_2015]. The finite impulse response filter used a Hamming window with 0.0194 passband ripple and 53 dB stopband attenuation. The lower passband edge and transition bandwidth were set at 0.10 Hz (-12 dB cutoff frequency: 0.05 Hz), and the upper passband edge and transition bandwidth were set at 50.00 Hz (-12 dB cutoff frequency: 56.25 Hz). The filter length was 16501 samples (33.002 seconds). These filter parameters were selected after exploring the difference between raw and filtered signals and verifying that the selected filter parameters improved signal quality over alternative filter parameters or the raw signal [@widmannetal_DigitalFilterDesign_2015]. Second, the data was downsampled from 500 to 200 Hz in order to reduce the size of the data and speed up computations operating on the data. Third, data was rereferenced to the common average reference in order to reduce spatial biases in the signal amplitude of channels caused by their distance to the original reference electrode [@nunezsrinivasan_ElectricFieldsBrain_2006]. Fourth, bad channels and segments were manually marked and removed to prepare the data for ICA decomposition. Channels were marked as bad if they contained excessive noise or drift for a significant portion of the recording. Bad channels were marked in `r papaja::apa_num(bad_channels_percent_bad)`% of recordings, ranging from `r bad_channels_n_min` to `r bad_channels_n_max` bad channels marked per recording with a mode of `r bad_channels_n_mode`. Segments were marked as bad if they contained excessive noise or drift that (1) could interfere with fitting the ICA decomposition due to the amount of variance their component would capture, or (2) was unlikely to be repaired by ICA decomposition. Bad segments were marked in `r papaja::apa_num(bad_segments_percent_bad)`% of the recordings, ranging from `r bad_segments_n_min` to `r bad_segments_n_max` bad segments marked per recording with a mode of `r bad_segments_n_mode`. The total duration of bad segments per recording across the entire sample ranged from `r papaja::apa_num(bad_segments_duration_totals_min)` to `r papaja::apa_num(bad_segments_duration_totals_max)` seconds long (M = `r papaja::apa_num(bad_segments_duration_totals_mean)`, SD = `r papaja::apa_num(bad_segments_duration_totals_sd)`). Fifth, ICA decomposition fitted using the Picard algorithm [@ablinetal_FasterICAOrthogonal_2017; @ablinetal_FasterIndependentComponent_2018] was performed to remove components carrying muscle artifacts or ocular artifacts (eye blinks, saccades, or horizontal eye movements) from the data. Components carrying artifacts were manually selected and then removed. Finally, bad channels were interpolated using spherical splines [@perrinetal_SphericalSplinesScalp_1989] and put back into the data.
 
-After artifact rejection, the continuous data was divided into 5 second epochs and filtered into five frequency bands to prepare for functional connectivity analysis. This was a three step process. First, the epochs with an 8 second duration were created at 5 second intervals such that an epoch occurred from 0-8 seconds, 5-13 seconds, 10-18 seconds, and so forth, until the end of the recording. Epochs that contained a bad segment were removed. Second, the epoched data was filtered into five frequency bands---delta ($\delta$, 1-4 Hz), theta ($\theta$, 4-8 Hz), alpha ($\alpha$, 8-13 Hz), beta ($\beta$, 13-30 Hz), and gamma ($\gamma$, 30-50 Hz)---using a two-pass forward and reverse, zero-phase, non-causal band-pass finite impulse response filter. Third, epochs were cropped to a 5 second duration starting 1 second into each epoch such that an epoch then occurred from 1-6 seconds, 6-11 seconds, 11-16 seconds, and so forth. We used this three step process in order to avoid distorting the true signal, as filtering epoched data creates edge artifacts at the start and end of each epoch that distort the true signal. Creating longer epochs in the first step provided padding around the edges of each epoch that could be cropped in the third step to remove these edge artifacts; and overlapping epochs in the first step made it possible for the cropped epochs in the third step to be non-overlapping and contiguous with reference to the continuous data, preserving the true signal across the length of the recording. The final 5 second duration was selected in order to have a sufficient number of oscillatory cycles per epoch to get reliable functional connectivity estimates across all five frequency bands.
+After artifact rejection, the continuous data was divided into 5 second epochs and filtered into five frequency bands to prepare for functional connectivity analysis. This was a three-step process. First, the epochs with an 8 second duration were created at 5 second intervals such that an epoch occurred from 0-8 seconds, 5-13 seconds, 10-18 seconds, and so forth, until the end of the recording. Epochs that contained a bad segment were removed. Second, the epoched data was filtered into five frequency bands---delta ($\delta$, 1-4 Hz), theta ($\theta$, 4-8 Hz), alpha ($\alpha$, 8-13 Hz), beta ($\beta$, 13-30 Hz), and gamma ($\gamma$, 30-50 Hz)---using a two-pass forward and reverse, zero-phase, non-causal band-pass finite impulse response filter. Third, epochs were cropped to a 5 second duration starting 1 second into each epoch such that an epoch then occurred from 1-6 seconds, 6-11 seconds, 11-16 seconds, and so forth. We used this three-step process in order to avoid distorting the true signal, as filtering epoched data creates edge artifacts at the start and end of each epoch that distort the true signal. Creating longer epochs in the first step provided padding around the edges of each epoch that could be cropped in the third step to remove these edge artifacts; and overlapping epochs in the first step made it possible for the cropped epochs in the third step to be non-overlapping and contiguous with reference to the continuous data, preserving the true signal across the length of the recording. The final 5 second duration was selected in order to have a sufficient number of oscillatory cycles per epoch to get reliable functional connectivity estimates across all five frequency bands.
 
 ## Analyses
 
@@ -158,13 +158,13 @@ $$
 X_{\bot Y}(a, b) = \operatorname{Im} \left(X(a, b) \frac{Y(a, b)^*}{\vert Y(a, b) \vert} \right),
 $$
 
-where $Y(a, b)^*$ is the complex conjugate of $X(a, b)$. Similarly to the phase lag index, the orthogonalization procedure used here allowed us to ignore parts of the signal that can be explained by volume conduction from a single common source, making the subsequent amplitude envelope correlations a sound measure of the interactions between different underlying neural sources [@hippetal_LargescaleCorticalCorrelation_2012]. After orthogonalization, the amplitude envelopes of the two analytic signals were computed by taking the absolute value of each signal, then the amplitude envelope correlation between them was estimated. We computed amplitude envelope correlations for both directions of the orthogonalization ($X$ to $Y$, and $Y$ to $X$), then averaged the values to get the final amplitude envelope correlation estimate for each pair.
+where $Y(a, b)^*$ is the complex conjugate of $X(a, b)$. This orthogonalization procedure allowed us to ignore the parts of each signal that could be explained by volume conduction from a single common source, making the subsequent amplitude envelope correlations a sound measure of the interactions between different underlying neural sources [@hippetal_LargescaleCorticalCorrelation_2012]. After orthogonalization, the amplitude envelopes of the two analytic signals were computed by taking the absolute value of each signal, then the amplitude envelope correlation between them was estimated. We computed amplitude envelope correlations for both directions of the orthogonalization ($X$ to $Y$, and $Y$ to $X$), then averaged the values to get the final amplitude envelope correlation estimate for each pair.
 
 The amplitude envelope correlation takes values between 0 and 1. A value of 0 indicates no amplitude coupling between the orthogonalized signals, and a value of 1 indicates perfect amplitude coupling with a consistent amplitude envelope correlation between the orthogonalized signals.
 
 #### Interpreting functional connectivity
 
-We use connectivity profile matrices [@demuruetal_FunctionalEffectiveWhole_2017] to compactly display the phase and amplitude coupling functional connectome from each recording. These plots serve as a supplement to our similarity analyses, providing a broad idea of what aspects of functional connectivity are being summarized by a given similarity estimate. Each row shows the vectorized lower-triangle of the phase or amplitude coupling functional connectome from a given recording (i.e., all unique pairs in the connectome), and each column represents a pair of sensors. The strength of coupling between any pair of sensors corresponds to their phase lag index or amplitude envelope correlation estimate and is represented by the colour of that cell in the matrix, with darker colours representing less coupling and brighter colours representing more coupling. 
+We use connectivity profile matrices [@demuruetal_FunctionalEffectiveWhole_2017] to compactly display the phase and amplitude coupling functional connectome from each recording. These plots serve as a supplement to our similarity analyses, providing a broad idea of what aspects of functional connectivity are being summarized by a given similarity estimate. Each row shows the vectorized lower triangle of the phase or amplitude coupling functional connectome from a given recording (i.e., all unique pairs in the connectome), and each column represents a pair of sensors. The strength of coupling between any pair of sensors corresponds to their phase lag index or amplitude envelope correlation estimate and is represented by the colour of that cell in the matrix, with darker colours representing less coupling and brighter colours representing more coupling. 
 
 ### Functional connectome similarity
 
@@ -190,19 +190,19 @@ We use similarity matrices to examine the similarities of functional connectomes
 
 <!-- Constant dispersion (phi) was used for the model; this doesn't need to be mentioned explicitly, but it's worth leaving a reminder here as a comment. -->
 
-We used a mixed beta regression to model how functional connectome similarity varied between and within individuals, sessions, and states at the group-level for each frequency band [for an accessible overview of mixed beta regression, see @doumaweedon_AnalysingContinuousProportions_2019; @heiss_GuideModelingProportions_2021]. The unit of observation was the pair of functional connectomes used for a given similarity estimate. The response variable was the RV coefficient estimated for each pair, which was modelled with a beta distribution and related to the predictors with the logit link function following the parameterization of @cribari-netozeileis_BetaRegression_2010 and @ferraricribari-neto_BetaRegressionModelling_2004. The predictors were binary indicators (where $0 = \textrm{No}$ and  $1 = \textrm{Yes}$) for whether a pair was within participant, within session, or within state, and their interactions. Because the RV coefficient estimates are based on the similarity of pairs of functional connectomes we accounted for statistical dependencies between observations by adding random intercepts to the model. All random effects were assumed to be normally distributed [@brooksetal_GlmmTMBBalancesSpeed_2017].
+We used a mixed beta regression to model how functional connectome similarity varied between and within individuals, sessions, and states at the group-level for each frequency band [for an accessible overview of mixed beta regression, see @doumaweedon_AnalysingContinuousProportions_2019; @heiss_GuideModelingProportions_2021]. The unit of observation was the pair of functional connectomes used for a given similarity estimate. The response variable was the RV coefficient estimated for each pair, which was modelled with a beta distribution and related to the predictors with the logit link function following the parameterization of @cribari-netozeileis_BetaRegression_2010 and @ferraricribari-neto_BetaRegressionModelling_2004. The predictors were binary indicators (where $0 = \textrm{No}$ and  $1 = \textrm{Yes}$) for whether a pair was within participant, within session, or within state, and their interactions. Because the RV coefficient estimates are based on the similarity of pairs of functional connectomes, we accounted for statistical dependencies between observations by adding random intercepts to the model. All random effects were assumed to be normally distributed [@brooksetal_GlmmTMBBalancesSpeed_2017].
 
 We fit two versions of this model, which differed slightly in their random effects specification: A *maximal model* (@barretal_RandomEffectsStructure_2013) with random intercepts for both the $\mathbf{X}$ and $\mathbf{Y}$ connectome that each observation came from to account for statistical dependencies between observations that had a connectome in common, and a random intercept for the participant pair to account for the repeated observation of the same participant pairs; and a *reduced model* with only random intercepts for both the $\mathbf{X}$ and $\mathbf{Y}$ connectome that each observation came from. The reduced models were fit for pragmatic reasons, due to convergence problems with several of the maximal models where the estimate for the variance of the participant pair parameter was zero (i.e., the fit was singular). The effect of not including participant pair was negligible for point estimates, which were similar or equivalent between models where it was and was not included; but was noticeable for interval estimates, which were generally wider by a factor of two to four when it was included compared to when it was not included. This difference did not meaningfully change the conclusions drawn from our results, however. Results from the reduced models are presented in the results section of this manuscript for parsimony across sections, and results from the maximal models are shown in Figures A\@ref(fig:phase-similarity-plots-maximal-theta)-A\@ref(fig:phase-similarity-plots-hilbert-maximal-gamma) in Appendix A.
 
 The fit of the model was assessed using the following diagnostics: Posterior predictive checks---wherein we simulated replicated data under the fitted model and compared these to the observed data---were used to check for systematic differences between the fitted model and observed data [@gelmanetal_BayesianDataAnalysis_2013; @gelmanetal_RegressionOtherStories_2020; @gelmanhill_DataAnalysisUsing_2006]. Randomized quantile residuals plotted against uniform distribution quantiles were used to check for signs of model misspecification [@dunnsmyth_RandomizedQuantileResiduals_1996; @hartiglohse_DHARMaResidualDiagnostics_2022]. Quantiles of the random effects plotted against standard normal distribution quantiles were used to check if the random effects were normally distributed; however, generalized linear mixed effects models have a large degree of robustness against misspecifying the shape of the random effects distribution [see @mccullochneuhaus_MisspecifyingShapeRandom_2011]. Variance Inflation Factors were used to check for multicollinearity between the predictors [@foxmonette_GeneralizedCollinearityDiagnostics_1992; @marcoulidesraykov_EvaluationVarianceInflation_2019; @obrien_CautionRegardingRules_2007], where a value of less than five as indicated low multicollinearity between the predictors, values between five and ten moderate, and values greater than ten high and not tolerable [@jamesetal_IntroductionStatisticalLearning_2021].
 
-After fitting the model we constructed a reference grid using estimated marginal means [@lenthetal_EmmeansEstimatedMarginal_2022; @searleetal_PopulationMarginalMeans_1980], which were back-transformed to the response scale (0-1) for interpretability. The estimated marginal means were then used to estimate the difference in functional connectome similarity within and between participants using pairwise contrasts, as we illustrated in the introduction. Differences were estimated for (1) the overall difference in similarity within and between participants, which we term the *main effect*; (2) the difference in similarity within and between participants for each level of one predictor (e.g., within session similarity) while averaging over levels of the other predictor (e.g., within and between state similarity); (3) the difference in similarity within and between participants for the unique combinations within and between session and state. For any of these contrasts: A difference of zero indicated equal amounts of functional connectome similarity within and between participants, a positive difference indicated more similarity within than between participants, and a negative difference indicated more similarity between than within participants.
+After fitting the model, we constructed a reference grid using estimated marginal means [@lenthetal_EmmeansEstimatedMarginal_2022; @searleetal_PopulationMarginalMeans_1980], which were backtransformed to the response scale [0-1] for interpretability. The estimated marginal means were then used to estimate the difference in functional connectome similarity within and between participants using pairwise contrasts, as we illustrated in the introduction. Differences were estimated for (1) the overall difference in similarity within and between participants, which we term the *main effect*; (2) the difference in similarity within and between participants for each level of one predictor (e.g., within session similarity) while averaging over levels of the other predictor (e.g., within and between state similarity); (3) the difference in similarity within and between participants for the unique combinations within and between session and state. For any of these contrasts: A difference of zero indicated equal amounts of functional connectome similarity within and between participants, a positive difference indicated more similarity within than between participants, and a negative difference indicated more similarity between than within participants.
 
 #### Interpreting group-level contrasts
 
 We use interval plots to report the group-level contrasts estimating the difference in functional connectome similarity within and between participants at various levels of the session and state predictors. To interpret these contrasts, we report compatibility intervals (CIs), which are equivalent to classical confidence intervals [@amrheingreenland_DiscussPracticalImportance_2022]. An $x\%$ compatibility interval shows the effect sizes most compatible with our data, given the correctness of the set of procedural and statistical assumptions used to compute the interval, which we call the *background model* [see @amrheingreenland_DiscussPracticalImportance_2022]. As discussed by @amrheinetal_ScientistsRiseStatistical_2019, there are two important points to keep in mind when interpreting compatibility intervals. First, although interval shows the values most compatible with our data, it does not mean values outside the interval are incompatible; they are merely less compatible, given our background model. Indeed, there are many values outside the interval that will also be compatible with our data, which have not been included due to (known and unknown) assumptions that we have not modelled [@amrheinetal_InferentialStatisticsDescriptive_2019]. Second, the point estimate and values near it are more compatible with our data than values near the limits of the interval; we use both 95% and 66% compatibility intervals in our plots to highlight this. Additionally, given that the correctness of *all* assumptions used to compute our estimates was doubtful (e.g., we knowingly misspecified the random effects of the reduced mixed beta regression models, the absence of measurement errors in our procedure is unlikely, etc.), we emphasize that our estimates likely understate uncertainty about the effect sizes most compatible with our data, and should not be taken as showing some general truth [@amrheinetal_InferentialStatisticsDescriptive_2019].
 
-In addition, to assist readers unfamiliar with the analytic approach we have taken here, for each contrast we also report the observed $p$-value corresponding to a targeted hypothesis test of zero difference in functional connectome similarity within and between participants. The $p$-value takes values between 0 and 1, and provides a measure of the degree of statistical compatibility between the targeted hypothesis and our data, given the background model [@greenland_ValidPValuesBehave_2019; @greenlandetal_StatisticalTestsValues_2016]. A value of 0 indicates complete incompatibility between the targeted hypothesis and our data, and a value of 1 indicates no incompatibility between the targeted hypothesis and our data apparent from the test [@greenland_ValidPValuesBehave_2019]. Additionally, just as we discussed for compatibility intervals, we emphasize that each $p$-value refers to a targeted hypothesis test of *every* assumption used to compute the test, including procedural and statistical assumptions as well as the targeted hypothesis of zero difference [@greenland_InvitedCommentaryNeed_2017]. Thus, a small $p$-value only suggests that there may be a problem with at least one assumption used to compute the test, without indicating which one; and a large $p$-value only suggests that the test did not detect a problem, without indicating whether this was because there were no problems or because the test was insensitive to them [@amrheinetal_InferentialStatisticsDescriptive_2019; @greenland_InvitedCommentaryNeed_2017]. Given that the correctness of *all* assumptions used to compute our tests was doubtful, we emphasize that the observed $p$-values corresponding to each of our targeted hypothesis tests merely describe the relation of our models to our data, and should not be taken as providing generalizable truths about the veracity of our scientific hypotheses [@amrheinetal_InferentialStatisticsDescriptive_2019].
+In addition, to assist readers unfamiliar with the analytic approach we have taken here, for each contrast we also report the observed $p$-value corresponding to a targeted hypothesis test of zero difference in functional connectome similarity within and between participants. The $p$-value takes values between 0 and 1 and provides a measure of the degree of statistical compatibility between the targeted hypothesis and our data, given the background model [@greenland_ValidPValuesBehave_2019; @greenlandetal_StatisticalTestsValues_2016]. A value of 0 indicates complete incompatibility between the targeted hypothesis and our data, and a value of 1 indicates no incompatibility between the targeted hypothesis and our data apparent from the test [@greenland_ValidPValuesBehave_2019]. Additionally, just as we discussed for compatibility intervals, we emphasize that each $p$-value refers to a targeted hypothesis test of *every* assumption used to compute the test, including procedural and statistical assumptions as well as the targeted hypothesis of zero difference [@greenland_InvitedCommentaryNeed_2017]. Thus, a small $p$-value only suggests that there may be a problem with at least one assumption used to compute the test, without indicating which one; and a large $p$-value only suggests that the test did not detect a problem, without indicating whether this was because there were no problems or because the test was insensitive to them [@amrheinetal_InferentialStatisticsDescriptive_2019; @greenland_InvitedCommentaryNeed_2017]. Given that the correctness of *all* assumptions used to compute our tests was doubtful, we emphasize that the observed $p$-values corresponding to each of our targeted hypothesis tests merely describe the relation of our models to our data and should not be taken as providing generalizable truths about the veracity of our scientific hypotheses [@amrheinetal_InferentialStatisticsDescriptive_2019].
 
 ### Individual-level functional connectome similarity contrasts
 
